css: fixed spacing in forms
Fixes: https://github.com/gitcoinco/web/issues/1056

--- a/app/assets/v2/css/base.css
+++ b/app/assets/v2/css/base.css
@@ -543,7 +543,7 @@ input[type=text].loading {
 #primary_form {
   max-width: 500px;
   margin: 0 auto;
-  padding: 0 4em;
+  padding: 0 2em;
 }
 
 #primary_form img {
